[package]
name = "async-stream"

# When releasing to crates.io:
# - Update html_root_url in src/lib.rs
# - Update CHANGELOG.md.
# - Run ./generate-readme
# - Create git tag v0.x.y
version = "0.1.0-alpha.1"

readme = "README.md"
description = "Produce items for a stream from an async closure"
documentation = "https://docs.rs/async-stream"
repository = "https://github.com/miquels/async-stream-rs"
homepage = "https://github.com/miquels/async-stream-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["async", "stream", "yield"]
categories = ["asynchronous", "rust-patterns"]

[lib]
name = "async_stream"
path = "src/lib.rs"

[features]
default = [ "compat" ]

# The 'compat' feature adds support for futures 0.1 streams.
compat = [ "futures01", "futures/compat" ]

[dependencies]
futures01 = { package = "futures", version = "0.1.28", optional = true }
futures = { package = "futures-preview", version = "0.3.0-alpha.17" }

